# Short-Video-Matrix-Master

./: .cursorrules  .gitignore  README.md
backend/: .env.example  .gitignore  Dockfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  drafts.py  files.py  image_analysis.py  login.py  statistics.py  system_config.py  users.py  video_analysis.py  video_editor.py  youtube.py
backend/app/core/: config.py  deps.py  logger.py  security.py
backend/app/crud/: system_config.py  youtube_history.py
backend/app/db/: base.py  init_db.py
backend/app/db/models/: __init__.py  base_model.py  draft.py  operation_log.py  statistics.py  system_config.py  user.py  video_analysis.py  video_editor.py  youtube_history.py
backend/app/middleware/: logging.py
backend/app/schemas/: system_config.py  token.py  user.py
backend/scripts/: change_password.py  debug.py  init_db.sql  run_debug.py  setup-dev.sh  shorts.py
frontend/: .env.development  .env.production  .eslintignore  .eslintrc.js  .gitignore  babel.config.js  jsconfig.json  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  dashboard.js  drafts.js  files.js  image.js  index.js  settings.js  statistics.js  system.js  user.js  video-editor.js  video.js  youtube-history.js  youtube.js
frontend/src/config/: api.config.js
frontend/src/layout/: Layout.vue
frontend/src/router/: index.js
frontend/src/store/: getters.js  index.js
(+14 files in other folders)
